--- a/src/air-quality/AirQualityStyle.css
+++ b/src/air-quality/AirQualityStyle.css
@@ -8,44 +8,59 @@
 }
 
 .block {
-    background-color: #d8eeff;
+    background-color: white;
+    box-shadow: 0 3px 3px rgba(0,0,0,0.25), 0 3px 3px rgba(0,0,0,0.22);
     min-width: 0;
     word-wrap: break-word;
-    border: 1px solid rgba(0,0,0,.125);
-    border-radius: 0.25rem;
-    width: 20rem;
+    border-radius: 1.5rem;
+    width: 75rem;
     padding: 2rem 0;
     margin-bottom: 10px;
     margin-right: 10px;
+    max-height: 100%;
 
 }
 
 .components {
     display: flex;
     flex-direction: row;
-    width: 100%;
+    flex: 1;
     text-align: center;
+    font-size: 12px;
+    justify-content: end;
 }
 
 .components_1 {
-    width: 50%;
+    display: flex;
+    flex-direction: column;
+    width: 25%;
 
 }
 
 .components_2 {
-    width: 50%;
+    display: flex;
+    flex-direction: column;
+    width: 25%;
 }
 
 .indexQuality {
     display: flex;
-    justify-content: center;
-    font-size: 30px;
+    justify-content: start;
+    font-size: 45px;
+    flex: 1;
+    padding-left: 9px;
 }
 
 .header {
     text-align: center;
 }
 
+.city {
+    margin-left: 90px;
+}
+
 .weekdayName {
-    text-align: center;
+    text-align: start;
+    padding-left: 9px;
+
 }
