--- a/src/air-quality/AirQualityStyle.css
+++ b/src/air-quality/AirQualityStyle.css
@@ -139,6 +139,7 @@
     width: 20rem;
 }
 
+
 .infoStatus {
     display: flex;
 }
@@ -149,4 +150,79 @@
 
 .infoIcon {
     margin-top: 10px;
+}
+
+.faq {
+    text-align: center;
+    font-size: 30px;
+}
+
+.faqComponent {
+    font-family: sans-serif;
+    text-align: center;
+}
+
+.question-section {
+    background: transparent;
+    border: none;
+    border-radius: 8px;
+    width: 80vw;
+}
+
+.questionDiv {
+    align-items: center;
+    display: flex;
+    min-height: 10px;
+    text-align: left;
+    margin-left: 6px;
+}
+
+.question-align h4 {
+    margin-left: 8px;
+}
+
+.question {
+    font-size: 20px;
+    width: 100%;
+}
+
+.question-icon {
+    background: none;
+    border: none;
+    color: #1b6aae;
+    cursor: pointer;
+    font-size: 22px;
+    margin-left: auto;
+    margin-right: 8px;
+
+}
+
+.rotate {
+    transform: rotate(45deg);
+}
+
+.answer-divider {
+    border-top: 1px solid lightgray;
+}
+
+.answer {
+    margin-left: 8px;
+    margin-right: 8px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.6s ease;
+    text-align: left;
+}
+
+
+.answerStyle {
+    font-size: 17px;
+}
+
+
+.footer {
+    background-color: darkgray;
+    width: 100%;
+    height: 40px;
+    margin-top: 30px;
 }
