--- a/src/air-quality/AirQualityStyle.css
+++ b/src/air-quality/AirQualityStyle.css
@@ -22,12 +22,12 @@
 
 .components {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex: 1;
     text-align: center;
     font-size: 12px;
     justify-content: end;
-    margin-right: 120px;
+    margin-bottom: 30px;
 }
 
 .components_1 {
@@ -40,7 +40,7 @@
 .components_2 {
     display: flex;
     flex-direction: column;
-    width: 25%;
+    margin-left: 50px;
 }
 
 .indexQuality {
@@ -66,11 +66,9 @@
 }
 
 .pollutions {
-    text-align: right;
-    margin-right: 150px;
     font-size: 22px;
-    margin-bottom: 5px;
-
+    margin-bottom: 20px;
+    text-align: start;
 }
 
 .iconStatus {
@@ -96,10 +94,11 @@
 }
 
 .recommendation {
-    font-size: 20px;
-    margin-top: 20px;
     margin-left: 10px;
+}
 
+.recommendationText {
+    font-size: 18px;
 }
 
 .blockRecommendation {
@@ -109,7 +108,9 @@
 }
 
 .blocksRecommendations {
-    margin-left: 150px;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
 
 .component {
@@ -225,4 +226,22 @@
     width: 100%;
     height: 40px;
     margin-top: 30px;
+}
+
+.components_1_2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+.descriptionDiv {
+    flex: 1;
+    display: flex;
+    align-self: center;
+}
+
+.recommendationDiv {
+    flex: 1;
+    display: flex;
+    align-self: center;
 }
