--- a/src/air-quality/AirQualityStyle.css
+++ b/src/air-quality/AirQualityStyle.css
@@ -67,7 +67,6 @@
 
 .pollutions {
     font-size: 22px;
-    margin-bottom: 20px;
     text-align: start;
 }
 
@@ -134,11 +133,12 @@
     color: black;
     height: 2rem;
     outline: 0;
-    padding-inline-end: 44px;
-    padding-inline-start: 52px;
+    padding-inline-end: 30px;
+    padding-inline-start: 30px;
     position: relative;
     width: 20rem;
 }
+
 
 
 .infoStatus {
@@ -221,13 +221,6 @@
 }
 
 
-.footer {
-    background-color: darkgray;
-    width: 100%;
-    height: 40px;
-    margin-top: 30px;
-}
-
 .components_1_2 {
     display: flex;
     flex-direction: row;
@@ -245,3 +238,21 @@
     display: flex;
     align-self: center;
 }
+
+.buttonDiv {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.button {
+    background-color: cornflowerblue;
+    border: none;
+    color: white;
+    padding: 10px 25px;
+    text-align: center;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+
