--- a/src/air-quality/styles/AirQualityStyle.css
+++ b/src/air-quality/styles/AirQualityStyle.css
@@ -8,7 +8,7 @@
 
 .block {
     background-color: white;
-    box-shadow: 0 3px 3px rgba(0,0,0,0.25), 0 3px 3px rgba(0,0,0,0.22);
+    box-shadow: 4px 2px 2px rgb(0 0 0 / 2%), 0 2px 5px rgb(0 0 0 / 15%);
     min-width: 0;
     word-wrap: break-word;
     border-radius: 1.5rem;
